<pre>
date:
	* version 0.4
	* extension GUID was changed to 'vimperator@mozdev.net' -> YOU WILL HAVE
	  TO UNINSTALL ANY OLD VIMPERATOR INSTALLATION BEFORE INSTALLING THIS VERSION
	* support for 'wildmode' completion setting
	* changed regexp search to normal text search for completion -> massive speedup, but limited functionality
	* support for :open ./ , :open .. and :open ... (patch from Lee Hinman)
	  'gu' and <BackSpace> goes up a directory component, gU and <C-BackSpace> to the root directory 
	* Esc now doesn't stop loading the webpage, use Ctrl-c instead, :stop command added
	* changed hinttags to work with dict.leo.org and hintstyle to work with digg.com
	* :back! goes to beginning of history now
	* diabled firefox 3.0 support for now, as there are just too many small
	  bugs
	* :help section supported, :help set will show help for the :set command
	  (patch from Viktor Kojouharov)
	* :source support, and auto-sourcing ~/.vimperatorrc on startup
	* :javascript <<EOF support to execute multiline javascript code
	  also changed :exec to behave more vim like
	* fixed saving of session
	* fixed hints display when zooming in/out of a web page
	* added 'B' command for continous buffer display
	* changed hintsize to 12px by default
	* 'previewheight' setting to set the maximum size for the preview window
	* showmode setting which shows the current mode in the command line (patch from Виктор Кожухаров)
	* gh goes home :) gH in a new tab
	* :open! bypasses cache
	* :buffer and :buffers support (patch from Lars Kindler)
	* added :edit, :e and :tabedit aliases for :open, :tabopen
	* settings can now be changed with += and -= like in vim (patch from Виктор Кожухаров)
	* Support for space/shift-space/alt-left/alt-right keys without beeping
	* :open without argument reloads current page, :tabopen opens an empty tab
	* added 'n' and 'N' to repeat a search
	* many small bug fixes

17/04/2007:
	* version 0.3