@@ -31,6 +31,7 @@ FEATURES:
 6 :map commands to keys
 6 autocommands (BrowserStart, BrowserQuit, TabClose, TabOpen, TabChanged, PageLoaded, any more?)
 6 vim like mappings for caret mode and textboxes (i to start caret mode?)
+  http://nigel.mcnie.name/gnawt/ has a somewhat working implementation
 6 pipe selected text/link/website to an external command
 6 it would be nice to have :(undo|back|forward) <url> w/ tab completion support
 6 macros (qq)
