@@ -3,7 +3,8 @@ date:
 	* version 0.4
 	* extension GUID was changed to 'vimperator@mozdev.net' -> YOU WILL HAVE
 	  TO UNINSTALL ANY OLD VIMPERATOR INSTALLATION BEFORE INSTALLING THIS VERSION
-	* support for 'wildmode' completion setting
+	* support for 'wildmode' completion setting with support for matching the
+	  longest common substring
 	* changed regexp search to normal text search for completion -> massive speedup, but limited functionality
 	* support for :open ./ , :open .. and :open ... (patch from Lee Hinman)
 	  'gu' and <BackSpace> goes up a directory component, gU and <C-BackSpace> to the root directory 
@@ -12,7 +13,7 @@ date:
 	* :back! goes to beginning of history now
 	* diabled firefox 3.0 support for now, as there are just too many small
 	  bugs
-	* :help section supported, :help set will show help for the :set command
+	* :help section supported, :help :set will show help for the :set command
 	  (patch from Viktor Kojouharov)
 	* :source support, and auto-sourcing ~/.vimperatorrc on startup
 	* :javascript <<EOF support to execute multiline javascript code
